unpackaged/main/default/objects/OrderApi__Invoice__c/OrderApi__Invoice__c.object-meta.xml
<CustomObject>
    <description>Invoices track sales to customers that are not immediately paid for.</description>
    <label>Invoice</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>