unpackaged/main/default/objects/OrderApi__Invoice__c/fields/Billing_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Line_1__c</fullName>
    <formula>OrderApi__Billing_City__c &amp; &#39;,&#39; &amp; OrderApi__Billing_State__c &amp; &#39; &#39; &amp; OrderApi__Billing_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address Line 1</label>
    <type>Text</type>
</CustomField>