unpackaged/main/default/objects/OrderApi__Invoice__c/fields/FON_Billing_Cycle__c.field-meta.xml
<CustomField>
    <fullName>FON_Billing_Cycle__c</fullName>
    <inlineHelpText>Please provide the appropriate billing cycle from the following options:
N/A, 1Q, 1Q Full, 2Q, 3Q, 4Q, All</inlineHelpText>
    <label>Billing Cycle</label>
    <length>8</length>
    <type>Text</type>
</CustomField>