unpackaged/main/default/objects/OrderApi__Invoice__c/fields/FON_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>FON_Invoice_Number__c</fullName>
    <formula>FON_Billing_Cycle__c</formula>
    <label>TCH Invoice Number</label>
    <type>Text</type>
</CustomField>