unpackaged/main/default/objects/OrderApi__Invoice__c/fields/FontevaReports__Posted_Age__c.field-meta.xml
<CustomField>
    <fullName>FontevaReports__Posted_Age__c</fullName>
    <formula>Today() - OrderApi__Posted_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the number of days since the Posted Date.</inlineHelpText>
    <label>Posted Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>