unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__Adjustments__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Adjustments__c</fullName>
    <description>**System Calculated** The sum of the value of related invoice line&#39;s &quot;Total&quot; field if the line&#39;s &quot;Is Adjustment&quot; field is checked.</description>
    <inlineHelpText>**System Calculated** The sum of the value of related invoice line&#39;s &quot;Total&quot; field if the line&#39;s &quot;Is Adjustment&quot; field is checked.</inlineHelpText>
    <label>DEPRECATED</label>
    <summarizedField>OrderApi__Invoice_Line__c.OrderApi__Subtotal__c</summarizedField>
    <summaryFilterItems>
        <field>OrderApi__Invoice_Line__c.OrderApi__Is_Adjustment__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderApi__Invoice_Line__c.OrderApi__Is_Posted__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderApi__Invoice_Line__c.OrderApi__Is_Child_Line__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderApi__Invoice_Line__c.OrderApi__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>