unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Amount_Paid__c</fullName>
    <description>**System Calculated/Override** Sum of all payments received for the Invoice.</description>
    <inlineHelpText>**System Calculated/Override** Sum of all payments received for the Invoice.</inlineHelpText>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>