unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__Amount_Refunded__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Amount_Refunded__c</fullName>
    <defaultValue>0</defaultValue>
    <description>** System Calculated ** The total amount of refunds that have been posted related to this Invoice.</description>
    <inlineHelpText>** System Calculated ** The total amount of refunds that have been posted related to this Invoice.</inlineHelpText>
    <label>Amount Refunded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>