unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__AR_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__AR_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override** The A/R account to use when posting to receivables. Default value is the linked Business Group&#39;s A/R account.</description>
    <inlineHelpText>**System Calculated/Override** The A/R account to use when posting to receivables. Default value is the linked Business Group&#39;s A/R account.</inlineHelpText>
    <label>A/R Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>