unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Balance_Due__c</fullName>
    <description>**System Calculated** Total - Total Payments</description>
    <formula>OrderApi__Total__c  - OrderApi__Amount_Paid__c + OrderApi__Amount_Refunded__c - OrderApi__Credits_Applied__c + OrderApi__Credits_and_Adjustments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>**System Calculated** Total - Total Payments</inlineHelpText>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>