unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__Calculate_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Calculate_Due_Date__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the system will calculate the Due Date for the Invoice based on the selected Payment Terms.</description>
    <inlineHelpText>When checked, the system will calculate the Due Date for the Invoice based on the selected Payment Terms.</inlineHelpText>
    <label>Auto-Calculate Due Date</label>
    <type>Checkbox</type>
</CustomField>