unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__Credits_and_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Credits_and_Adjustments__c</fullName>
    <defaultValue>0</defaultValue>
    <description>**System Calculated** The sum of all credits and adjustments related to this invoice.</description>
    <inlineHelpText>**System Calculated** The sum of all credits and adjustments related to this invoice.</inlineHelpText>
    <label>Credit Notes/Adjustments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>