unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__Customer_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Customer_Reference_Number__c</fullName>
    <description>**System Calculated/Override/Conditional** Customer Reference Number (PO) flows down from related Sales Order (if applicable).</description>
    <inlineHelpText>**System Calculated/Override/Conditional** Customer Reference Number (PO) flows down from related Sales Order (if applicable).</inlineHelpText>
    <label>Customer Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>