unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__Days_Overdue__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Days_Overdue__c</fullName>
    <description>**System Calculated** If an invoice is overdue the integer value of today&#39;s date - the invoice due date will be used to populate this field.</description>
    <formula>IF(OrderApi__Is_Overdue__c,Today() - OrderApi__Due_Date__c,0)</formula>
    <inlineHelpText>**System Calculated** If an invoice is overdue the integer value of today&#39;s date - the invoice due date will be used to populate this field.</inlineHelpText>
    <label>Days Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>