unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__Description__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Description__c</fullName>
    <description>Internal-facing description for the Invoice. Does not display by default on Invoices, Receipts, and Templates containing Invoice information.</description>
    <inlineHelpText>Internal-facing description for the Invoice. Does not display by default on Invoices, Receipts, and Templates containing Invoice information.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>