unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Due_Date__c</fullName>
    <description>**System Calculated/Override** The date that payment is due for the invoice. By default the system derives the date from the invoice date and payment terms.</description>
    <inlineHelpText>**System Calculated/Override** The date that payment is due for the invoice. By default the system derives the date from the invoice date and payment terms.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>