unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__Entity__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Entity__c</fullName>
    <description>**Required** Select &quot;Account&quot; if the invoice should be billed to the related account, select &quot;Contact&quot; if the invoice should be sent to the related &quot;Contact&quot;.</description>
    <inlineHelpText>**Required** Select &quot;Account&quot; if the invoice should be billed to the related account, select &quot;Contact&quot; if the invoice should be sent to the related &quot;Contact&quot;.</inlineHelpText>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>