unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__Has_Payments__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Has_Payments__c</fullName>
    <description>**System Calculated** True if the Invoice has at least one payment applied against it.</description>
    <formula>OrderApi__Payment_Count__c != 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>**System Calculated** True if the Invoice has at least one payment applied against it.</inlineHelpText>
    <label>Has Payments</label>
    <type>Checkbox</type>
</CustomField>