unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__Has_Refunds__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Has_Refunds__c</fullName>
    <description>**System Calculated** True if the Invoice has one or more applied credit memos (&quot;Cash Payments&quot;) agains it.</description>
    <formula>OrderApi__Refund_Count__c != 0</formula>
    <inlineHelpText>**System Calculated** True if the Invoice has one or more applied credit memos (&quot;Cash Payments&quot;) agains it.</inlineHelpText>
    <label>Has Refunds</label>
    <type>Checkbox</type>
</CustomField>