unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoice_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <description>**Required/System Calculated/Override** The invoice date is derived from the parent sales order object.</description>
    <inlineHelpText>**Required/System Calculated/Override** The invoice date is derived from the parent sales order object.</inlineHelpText>
    <label>Invoice Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>