unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__Is_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated/Override** Checked when the Invoice was never posted and later cancelled as a result of the linked Sales Order being cancelled.</description>
    <inlineHelpText>**System Calculated/Override** Checked when the Invoice was never posted and later cancelled as a result of the linked Sales Order being cancelled.</inlineHelpText>
    <label>Is Cancelled</label>
    <type>Checkbox</type>
</CustomField>