unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__Is_Overdue__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Overdue__c</fullName>
    <description>**System Calculated** If an invoice is posted and the due date is in the past with an outstanding balance this field will be checked.</description>
    <formula>OrderApi__Is_Posted__c &amp;&amp; !OrderApi__Is_Voided__c &amp;&amp; OrderApi__Balance_Due__c &gt; 0 &amp;&amp; OrderApi__Due_Date__c &lt; Today()</formula>
    <inlineHelpText>**System Calculated** If an invoice is posted and the due date is in the past with an outstanding balance this field will be checked.</inlineHelpText>
    <label>Overdue</label>
    <type>Checkbox</type>
</CustomField>