unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__Is_Paid__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Paid__c</fullName>
    <description>**System Calculated** If an invoice balance due is less than or equal to 0 and flagged as &quot;Posted&quot; this field will be checked.</description>
    <formula>OrderApi__Balance_Due__c &lt;= 0 &amp;&amp; OrderApi__Is_Posted__c</formula>
    <inlineHelpText>**System Calculated** If an invoice balance due is less than or equal to 0 and flagged as &quot;Posted&quot; this field will be checked.</inlineHelpText>
    <label>Paid</label>
    <type>Checkbox</type>
</CustomField>