unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__Is_Posted__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Posted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the invoice has been posted and transactions (journal entries) have been created.</description>
    <inlineHelpText>Checked if the invoice has been posted and transactions (journal entries) have been created.</inlineHelpText>
    <label>Posted</label>
    <type>Checkbox</type>
</CustomField>