unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__Is_Voided__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Voided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked the Invoice will be voided and any &quot;Receivable&quot; transactions will be reversed. Default unchecked.</description>
    <inlineHelpText>When checked the Invoice will be voided and any &quot;Receivable&quot; transactions will be reversed. Default unchecked.</inlineHelpText>
    <label>Voided</label>
    <type>Checkbox</type>
</CustomField>