unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__Item_Count__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item_Count__c</fullName>
    <description>**System Calculated** Count of the number of items related to the invoice.</description>
    <inlineHelpText>**System Calculated** Count of the number of items related to the invoice.</inlineHelpText>
    <label>Item Count</label>
    <summaryForeignKey>OrderApi__Invoice_Line__c.OrderApi__Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>