unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Paid_Date__c</fullName>
    <description>**System Calculated/Override** The date the invoice was paid in full.</description>
    <inlineHelpText>**System Calculated/Override** The date the invoice was paid in full.</inlineHelpText>
    <label>Paid Date</label>
    <type>Date</type>
</CustomField>