unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__Payment_Count__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>**System Calculated/Override** Count of the number of &quot;Payment&quot; Receipts related to the Invoice.</description>
    <inlineHelpText>**System Calculated/Override** Count of the number of &quot;Payment&quot; Receipts related to the Invoice.</inlineHelpText>
    <label>Number of Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>