unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The payment terms for the invoice. If not defined on record creation the default terms defined on the Commerce custom setting will be used.</description>
    <inlineHelpText>The payment terms for the invoice. If not defined on record creation the default terms defined on the Commerce custom setting will be used.</inlineHelpText>
    <label>Payment Terms</label>
    <referenceTo>OrderApi__Payment_Terms__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>