unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__Subscription__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** Link to related Subscription. Populated only when the Invoice is sent from a Subscription that is scheduled for auto-invoice on an &quot;Installment&quot; payment plan.</description>
    <inlineHelpText>** System Calculated ** Link to related Subscription. Populated only when the Invoice is sent from a Subscription that is scheduled for auto-invoice on an &quot;Installment&quot; payment plan.</inlineHelpText>
    <label>Subscription</label>
    <referenceTo>OrderApi__Subscription__c</referenceTo>
    <relationshipLabel>Invoices (Installments)</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>