unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__Subtotal__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Subtotal__c</fullName>
    <description>**System Calculated** The sum of the value of each related invoice detail line &quot;Subtotal&quot; field.</description>
    <inlineHelpText>**System Calculated** The sum of the value of each related invoice detail line &quot;Subtotal&quot; field.</inlineHelpText>
    <label>Subtotal</label>
    <summarizedField>OrderApi__Invoice_Line__c.OrderApi__Subtotal__c</summarizedField>
    <summaryFilterItems>
        <field>OrderApi__Invoice_Line__c.OrderApi__Is_Adjustment__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderApi__Invoice_Line__c.OrderApi__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>