unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__Term__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>System Calculated ** Relates Subscription Installments to Subscription Terms.</description>
    <inlineHelpText>System Calculated ** Relates Subscription Installments to Subscription Terms.</inlineHelpText>
    <label>Term</label>
    <referenceTo>OrderApi__Renewal__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>