unpackaged/main/default/objects/OrderApi__Invoice__c/fields/OrderApi__Voided_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Voided_Date__c</fullName>
    <description>**System Calculated** The date the invoice was voided.</description>
    <inlineHelpText>**System Calculated** The date the invoice was voided.</inlineHelpText>
    <label>Voided Date</label>
    <type>Date</type>
</CustomField>