unpackaged/main/default/objects/OrderApi__Invoice__c/listViews/OrderApi__All1.listView-meta.xml
<ListView>
    <fullName>OrderApi__All1</fullName>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>OrderApi__Status__c</columns>
    <columns>OrderApi__Customer_Link__c</columns>
    <columns>OrderApi__Posted_Date__c</columns>
    <columns>OrderApi__Invoice_Date__c</columns>
    <columns>OrderApi__Due_Date__c</columns>
    <columns>OrderApi__Paid_Date__c</columns>
    <columns>OrderApi__Voided_Date__c</columns>
    <columns>OrderApi__Total__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>