unpackaged/main/default/objects/OrderApi__Invoice__c/listViews/OrderApi__All_Outstanding.listView-meta.xml
<ListView>
    <fullName>OrderApi__All_Outstanding</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Invoice_Date__c</columns>
    <columns>OrderApi__Payment_Terms__c</columns>
    <columns>OrderApi__Due_Date__c</columns>
    <columns>OrderApi__Customer_Link__c</columns>
    <columns>OrderApi__Contact__c</columns>
    <columns>OrderApi__Total__c</columns>
    <columns>OrderApi__Amount_Paid__c</columns>
    <columns>OrderApi__Balance_Due__c</columns>
    <columns>OrderApi__Days_Overdue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OrderApi__Is_Paid__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>OrderApi__Entity__c</field>
        <operation>equals</operation>
        <value>Account</value>
    </filters>
    <label>All Outstanding</label>
</ListView>