unpackaged/main/default/objects/OrderApi__Invoice__c/listViews/OrderApi__All_Overdue.listView-meta.xml
<ListView>
    <fullName>OrderApi__All_Overdue</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Customer_Link__c</columns>
    <columns>OrderApi__Business_Group__c</columns>
    <columns>OrderApi__Account__c</columns>
    <columns>OrderApi__Invoice_Date__c</columns>
    <columns>OrderApi__Payment_Terms__c</columns>
    <columns>OrderApi__Due_Date__c</columns>
    <columns>OrderApi__Customer_Reference_Number__c</columns>
    <columns>OrderApi__Total__c</columns>
    <columns>OrderApi__Amount_Paid__c</columns>
    <columns>OrderApi__Balance_Due__c</columns>
    <columns>OrderApi__Days_Overdue__c</columns>
    <columns>OrderApi__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OrderApi__Is_Overdue__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Overdue</label>
    <language>en_US</language>
</ListView>